<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="@android:color/transparent"
        android:gravity="end"
        android:inputType="none"
        android:paddingTop="50dp"
        android:paddingBottom="300dp"
        android:text="@string/input"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/result"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="25dp"
        android:background="@android:color/transparent"
        android:gravity="end"
        android:inputType="none"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/main"
        tools:ignore="Autofill,LabelFor" />

<GridLayout
    android:id="@+id/main"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:columnCount="4"
    android:rowCount="6"
    >

    <!-- Row 1 -->
    <Button
        android:id="@+id/button_ac"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/ac"
        android:onClick="clearAll"
        />

    <Button
        android:id="@+id/button_bracket_start"
        style="@style/UniversalButtonStyle"
        android:text="@string/bracket_start"
        android:layout_marginEnd="10dp"
        android:onClick="appendFirstBracket"
        />

    <Button
        android:id="@+id/button_bracket_close"
        style="@style/UniversalButtonStyle"
        android:text="@string/bracket_close"
        android:layout_marginEnd="10dp"
        android:onClick="appendFirstBracketClose"
        />

    <Button
        android:id="@+id/button_percent"
        style="@style/UniversalButtonStyle"
        android:text="@string/percent"
        android:onClick="appendPercent"
        />

    <!-- Row 2 -->
    <Button
        android:id="@+id/button_seven"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/_7"
        android:onClick="appendSeven"
        />

    <Button
        android:id="@+id/button_eight"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/_8"
        android:onClick="appendEight"
        />

    <Button
        android:id="@+id/button_nine"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/_9"
        android:onClick="appendNine"
        />

    <Button
        android:id="@+id/button_divide"
        style="@style/UniversalButtonStyle"
        android:text="@string/divide"
        android:onClick="appendDivide"
        />

    <!-- Row 3 -->
    <Button
        android:id="@+id/button_four"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/_4"
        android:onClick="appendFour"
        />

    <Button
        android:id="@+id/button_five"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/_5"
        android:onClick="appendFive"
        />

    <Button
        android:id="@+id/button_six"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/_6"
        android:onClick="appendSix"
        />

    <Button
        android:id="@+id/button_multiply"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/multiply"
        android:onClick="appendMultiply"
        />

    <!-- Row 4 -->
    <Button
        android:id="@+id/button_one"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/_1"
        android:onClick="appendOne"
        />

    <Button
        android:id="@+id/button_two"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/_2"
        android:onClick="appendTwo"
        />

    <Button
        android:id="@+id/button_three"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/_3"
        android:onClick="appendThree"
        />

    <Button
        android:id="@+id/button_subtract"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/subtract"
        android:onClick="appendSubtract"
        />

    <!-- Row 5 -->
    <Button
        android:id="@+id/button_zero"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/_0"
        android:onClick="appendZero"
        />

    <Button
        android:id="@+id/button_clear"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/clear"
        android:onClick="clearSingle"
        />

    <Button
        android:id="@+id/button_result"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/result"
        android:onClick="calcResult"
        />

    <Button
        android:id="@+id/button_add"
        style="@style/UniversalButtonStyle"
        android:layout_marginEnd="10dp"
        android:text="@string/add"
        android:onClick="appendAddition"
        />

</GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>